# HMM-Market-Regime-Identification

./: README.md  main.py  pyproject.toml  requirements.txt
data/: feature_engineering.py  fetch_data.py  preprocessing.py
data/processed/: btcusdt_h4_features.parquet  btcusdt_h4_features_scaled.npy  btcusdt_h4_regimes.parquet  scaler.pkl
data/raw/: btcusdt_h4.parquet
model/: hmm_regime.py
