[project]
name = "hidden-makrov-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.8",
]
